--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,3 +1,9 @@
 .container__content{
     background-color: rgb(245 245 245);
 }
+.content__banner__voucher{
+    margin-top: 15px;
+}
+.content__mall{
+    margin-top: 15px;
+}
